.um.mutant_output13994
Picked up JAVA_TOOL_OPTIONS: -Duser.language=en
/Users/rainyd4y/projects/SAMutator/seeds/PMD_Validation/bestpractices_PrimitiveWrapperInstantiation/PrimitiveWrapperInstantiation18.java:6: error: class, interface, enum, or record expected
continue;
^
1 error
